@@ -7,6 +7,7 @@ v 6.7.0
   - Piwik Integration (Sebastian Winkler)
   - Show contribution guide link for new issue form (Jeroen van Baarsen)
   - Fix CI status for merge requests from fork 
+  - Added option to remove issue assignee on project issue page and issue edit page (Jason Blanchard)
 
 v 6.6.2
   - Fix 500 error on branch/tag create or remove via UI
